--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Satyam Srivastava | A Web developer"
     />
     <meta property="og:site_name" content="Satyam Srivastava Portfolio Website" />
-    <meta property="og:url" content="https://www.rammaheshwari.com/" />
+    <meta property="og:url" content="https://srivastava-satyam.netlify.app/" />
     <meta
       property="og:description"
       content="A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product"
@@ -64,7 +64,7 @@
           <div class="header__logo-img-cont">
             <img
               src="assets\Mypic1.png"
-              alt="Ram Maheshwari Logo Image"
+              alt="Satyam Logo Image"
               class="header__logo-img"
             />
           </div>
@@ -159,7 +159,7 @@
           >
             <img
               src="https://d33wubrfki0l68.cloudfront.net/ba3ef9fd9d500c55ba265adae6087ba71e05f5d9/d0067/assets/svg/twitter-dark.svg"
-              alt="RammCodes Twitter Profile"
+              alt="Satyam Twitter Profile"
               class="home-hero__social-icon"
             />
           </a>
@@ -174,7 +174,7 @@
           >
             <img
               src="https://d33wubrfki0l68.cloudfront.net/38469cf88d038b6ba3322c9fcb93a8f7167df4b9/cb0b9/assets/svg/github-dark.svg"
-              alt="RammCodes Github Profile"
+              alt="Satyam Github Profile"
               class="home-hero__social-icon"
             />
           </a>
