--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://i.ibb.co/C8Wnkrt/pretty-snap-2022-3-29-16-11.png"
+      content="https://drive.google.com/file/d/1khFfWqN64EbjyzpoHJkUMsyYCNdYu-yh/view?usp=share_link"
     />
 
     <link href='style.css' rel='stylesheet'/>
