--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 id="message"
               ></textarea>
             </div>
-            <button type="submit" class="btn btn--theme contact__btn">
+            <button type="submit" class="btn btn--theme contact__btn" id="#contactSubmit">
               Submit
             </button>
           </form>
@@ -462,6 +462,6 @@
     </footer>
 
     <script src='app.js'></script>
-    <script src="//code.tidio.co/oxrb1sz5jiafcw3yyuh5n4dzvhewz80g.js" async></script>
+    
   </body>
 </html>
