--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action='#' class='contact__form' method='post'><input type='hidden' name='form-name' value='form 1' />
+          <form  class='contact__form' method='post'><input type='hidden' name='form-name' value='form 1' />
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -390,7 +390,7 @@
                 id="message"
               ></textarea>
             </div>
-            <button type="submit" class="btn btn--theme contact__btn" id="#contactSubmit">
+            <button  type="submit" class="btn btn--theme contact__btn" id="#contactSubmit">
               Submit
             </button>
           </form>
@@ -451,7 +451,7 @@
           </div>
         </div>
 
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
+        
         <div class="main-footer__lower">
           &copy; Copyright <script>document.write(new Date().getFullYear())</script>. Made by
           <a rel="noreferrer" target="_blank" href="https://twitter.com/SatyamS57447252"
@@ -461,7 +461,6 @@
       </div>
     </footer>
 
-    <script src='app.js'></script>
     
   </body>
 </html>
