--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               </p>
               <a
                 class="btn btn--med btn--theme dynamicBgClr"
-                href="https://spontaneous-pasca-9b8315.netlify.app/"
+                href="https://movies-cart.netlify.app/"
                 target="_blank"
                 >Visit</a
               >
